--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,5 @@ dependencies = [
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.hooks.custom]
-paths = { default = "hatch_build.py" }
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
