--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,4 +34,4 @@ build-backend = "setuptools.build_meta"
 include-package-data = true
 
 [tool.setuptools.package-data]
-"FAST" = ["*.sh", "*.pyx", "*.pyc"]
+"FAST" = ["**/*.sh", "**/*.pyx", "**/*.pyc"]
